# SoftRenderer

./: CMakeLists.txt  NOTES-graphics.md  NOTES-operating.md  NOTES.md
include/: geometry.h  model.h  shader.h  tgaimage.h  transformation.h
outputs/Bresenham/: L01 k1.0.tga  ana O0.txt  ana O3.txt
outputs/Triangle rasterization/: L02 random color.tga
outputs/Z-buffer/: L03 texture.tga  L03 zbuffer.tga
src/: geometry.cpp  main.cpp  model.cpp  shader.cpp  tempCodeRunnerFile.cpp  transformation.cpp
